# snowda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lang_0.1.txt  notes.txt
src/: CMakeLists.txt  fixed_vector.h  heap.cpp  heap.h  lexer.cpp  lexer.h  parser.h  result.h  snowda.cpp  snowda.h  view.h
src/libsnw_code/: CMakeLists.txt  snw_code.h  snw_function.cpp  snw_function.h  snw_instruction.cpp  snw_instruction.h  snw_instruction_buffer.cpp  snw_instruction_buffer.h  snw_instruction_util.cpp  snw_instruction_util.h  snw_instruction_writer.cpp  snw_instruction_writer.h  snw_method.h  snw_program.cpp  snw_program.h  snw_type.cpp  snw_type.h
src/libsnw_compiler/: CMakeLists.txt  lexer.cpp  lexer.h  parser.cpp  parser.h  snw_code_generator.cpp  snw_code_generator.h  snw_compiler.h  snw_function_translator.cpp  snw_function_translator.h  snw_grammar.cpp  snw_grammar.h  snw_lexer.cpp  snw_lexer.h  snw_parser.cpp  snw_parser.h  snw_parser_error.cpp  snw_parser_error.h  snw_parser_result.cpp  snw_parser_result.h  snw_parser_util.h  snw_program.cpp  snw_program.h  snw_token.cpp  snw_token.h  snw_token_stream.cpp  snw_token_stream.h
src/libsnw_compiler/ast/: snw_ast.cpp  snw_ast.h  snw_ast_expr.cpp  snw_ast_expr.h  snw_ast_node.cpp  snw_ast_node.h  snw_ast_printer.cpp  snw_ast_printer.h  snw_ast_stmt.cpp  snw_ast_stmt.h  snw_ast_visitor.h
src/libsnw_compiler/grammar/: snw_assign_rules.cpp  snw_assign_rules.h  snw_character_rules.cpp  snw_character_rules.h  snw_default_rules.cpp  snw_default_rules.h  snw_error_rules.cpp  snw_error_rules.h  snw_fn_rules.cpp  snw_fn_rules.h  snw_grammar.cpp  snw_grammar.h  snw_identifier_rules.cpp  snw_identifier_rules.h  snw_number_rules.cpp  snw_number_rules.h  snw_operator_rules.h  snw_return_rules.cpp  snw_return_rules.h
src/libsnw_heap/: CMakeLists.txt  snw_allocator_page.h  snw_arena_allocator.cpp  snw_arena_allocator.h  snw_block.cpp  snw_block.h  snw_block_page.h  snw_buffer.cpp  snw_buffer.h  snw_buffer_page.h  snw_free_page.h  snw_heap.cpp  snw_heap.h  snw_page.cpp  snw_page.h  snw_page_allocator.cpp  snw_page_allocator.h  snw_page_pool.cpp  snw_page_pool.h  snw_page_set.cpp  snw_page_set.h  snw_region.cpp  snw_region.h
src/libsnw_memory/: CMakeLists.txt  snw_arena_allocator.cpp  snw_arena_allocator.h  snw_block.cpp  snw_block.h  snw_buffer.cpp  snw_chunk_allocator.cpp  snw_chunk_allocator.h  snw_heap.cpp  snw_heap.h  snw_memory.h  snw_memory_manager.cpp  snw_memory_manager.h  snw_memory_util.h  snw_page.cpp  snw_page.h  snw_page_allocator.cpp  snw_page_allocator.h  snw_page_set.cpp  snw_region.cpp  snw_region.h
src/libsnw_type/: CMakeLists.txt  snw_type.h
src/libsnw_util/: CMakeLists.txt  snw_bit_tree.cpp  snw_bit_tree.h  snw_bit_tree_inline.h  snw_fixed_vector.h  snw_intrusive_list.cpp  snw_intrusive_list.h  snw_result.h  snw_util.cpp  snw_util.h  snw_view.h
src/snw/: CMakeLists.txt  snw.cpp  snw.h  snw_driver.cpp  snw_driver.h  snw_process.h  snw_task.cpp  snw_task.h  snw_virtual_machine.cpp  snw_virtual_machine.h
src/snw_msg/: CMakeLists.txt  snw_msg.cpp  snw_msg.h
src/snw_study/: CMakeLists.txt  snw_study.cpp
src/snw_tst/: CMakeLists.txt  snw_tst.cpp  snw_tst.h  snw_tst_compiler.cpp  snw_tst_compiler.h  snw_tst_memory.cpp  snw_tst_memory.h  snw_tst_util.cpp  snw_tst_util.h  tst.cpp  tst.h
src/snwc/: CMakeLists.txt  snwc.cpp  snwc.h  snwc_ast.h  snwc_ast_dispatcher.h  snwc_ast_translator.cpp  snwc_ast_translator.h  snwc_grammar.cpp  snwc_grammar.h  snwc_lexer.cpp  snwc_lexer.h  snwc_parser.cpp  snwc_parser.h
